--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,55 @@
  *= require_tree .
  *= require_self
  */
+:root {
+  --primary-color: #434b64;
+  --secondary-color: #3778c2;
+  --tertiary-color: #5fb523;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  background-color: ghostwhite;
+}
+
+#splash_screen {
+  height: 100vh;
+}
+
+#splash_screen h1 {
+  font-family: 'Playball', cursive;
+  letter-spacing: 3px;
+  color: var(--primary-color);
+  text-align: center;
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+#splash_screen .actions {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#splash_screen .actions a {
+  display: block;
+  text-align: center;
+  text-decoration: none;
+  width: 95%;
+  padding: 18px 0;
+  font-weight: bolder;
+  color: gray;
+  font-size: 19px;
+}
+
+#splash_screen .actions a:nth-child(odd) {
+  background-color: var(--secondary-color);
+  color: #fff;
+}
