--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,2 +1,3 @@
 <%# <%= link_to 'Sign Out', destroy_user_session_path, method: :delete %> %>
 <%= link_to "Sign Out", destroy_user_session_path(@post), method: :delete, data: { "turbo-method": :delete }, class: "button is-small is-dark" %>
+<h2>Categories</h2>
