--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,39 +1,34 @@
-/*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS (and SCSS, if configured) file within this directory, lib/assets/stylesheets, or any plugin's
- * vendor/assets/stylesheets directory can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the bottom of the
- * compiled file so the styles you add here take precedence over styles defined in any other CSS
- * files in this directory. Styles in this file should be added after the last require_* statement.
- * It is generally better to create a new file per style scope.
- *
- *= require_tree .
- *= require_self
- */
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');
+
 :root {
-  --primary-color: #434b64;
-  --secondary-color: #3778c2;
-  --tertiary-color: #5fb523;
+  --main-color: #3778c2;
+  --second-color: #5fb523;
+  --text-color: #434b54;
 }
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  background-color: ghostwhite;
+  text-decoration: none;
+  list-style: none;
+  font-family: 'Montserrat', sans-serif;
+}
+
+body {
+  background-color: rgb(245, 245, 245);
 }
 
 #splash_screen {
   height: 100vh;
+  background-color: var(--main-color);
 }
 
 #splash_screen h1 {
   font-family: 'Playball', cursive;
+  font-size: 4rem;
   letter-spacing: 3px;
-  color: var(--primary-color);
+  color: var(--text-color);
   text-align: center;
   position: absolute;
   top: 40%;
@@ -57,11 +52,258 @@
   width: 95%;
   padding: 18px 0;
   font-weight: bolder;
-  color: gray;
+  color: var(--text-color);
   font-size: 19px;
 }
 
 #splash_screen .actions a:nth-child(odd) {
-  background-color: var(--secondary-color);
+  background-color: #e2e2e2;
+  color: var(--text-color);
+}
+
+/* Categories */
+
+.header {
+  position: fixed;
+  width: 100%;
+  top: 0;
+  height: 16vh;
+  background-color: var(--main-color);
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
+  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.2);
+}
+
+h1,
+h2 {
+  font-weight: 500;
+  color: var(--text-color);
+  text-align: center;
+  font-size: 23px;
+  text-transform: uppercase;
+}
+
+.h3 {
   color: #fff;
+  font-weight: lighter;
+}
+
+
+.header h1,
+.header h2 {
+  padding-bottom: 5px;
+}
+
+#categories,
+.form-container,
+.img-amount-container,
+.home-ul {
+  margin-top: 16vh;
+}
+
+a,
+a:visited {
+  color: inherit;
+  /* Use the same color as the default text color */
+}
+
+.form-container {
+  height: 75vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  font-size: 37px;
+}
+
+.form-container {
+  height: 60vh;
+}
+
+/* .home-ul a {
+  text-align: center;
+  background-color: rgb(245, 245, 245);
+  width: 90%;
+  padding-top: 4vh;
+  padding-bottom: 4vh;
+  box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.2);
+} */
+
+.field,
+.form-btn-container,
+.field_with_errors {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+.input-field {
+  border: none;
+  outline: none;
+  width: 90%;
+  height: 7vh;
+  padding-left: 6px;
+  font-size: 2.5vh;
+}
+
+.input-field::placeholder {
+  color: #e2e2e2;
+  padding-left: 6px;
+  font-size: 2.4vh;
+}
+
+/* Basic button styles */
+.form-btn {
+  width: 90%;
+  display: inline-block;
+  margin-top: 2vh;
+  padding: 12px;
+  font-size: 16px;
+  font-weight: bold;
+  text-align: center;
+  text-transform: uppercase;
+  border: none;
+  /* border-radius: 6px; */
+  cursor: pointer;
+  background-color: #3778c2;
+  color: var(--text-color);
+  /* transition: background-color 0.3s ease, transform 0.1s ease; */
+}
+
+/* Button hover effect
+.form-btn:hover {
+  background-color: #206a9b;
+  transform: scale(1.1);
+} */
+
+.remember-me-cb {
+  width: 7vw;
+}
+
+.remember-me-label {
+  font-size: 15px;
+  margin-left: 1vw;
+}
+
+/* Optional: Add more styles for different button states (e.g., :active, :focus) */
+
+#error_explanation,
+#error_explanation * {
+  font-size: 13px;
+  text-align: left;
+  text-transform: none;
+  color: rgba(255, 0, 0, 0.582);
+  padding-left: 3px;
+  font-weight: 600;
+}
+
+.nav-container {
+  display: flex;
+  justify-content: space-between;
+}
+
+.back-btn-a {
+  margin-left: 4%;
+  cursor: pointer;
+}
+
+.categories-ul {
+  font-size: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 85px;
+}
+
+.categories-ul li,
+.categories-ul a {
+  margin-top: 10px;
+  text-align: center;
+  background-color: #fff;
+  width: 92%;
+  padding-top: 2vh;
+  padding-bottom: 2vh;
+  box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.2);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.categories-ul li p {
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.img-amount-container {
+  width: 100%;
+  background-color: #fff;
+  box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.2);
+  padding-top: 1.5vh;
+  padding-bottom: 1.5vh;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.img-container {
+  height: 80px;
+  width: 80px;
+}
+
+.trans-amount {
+  padding-right: 4%;
+  font-size: 19px;
+  font-weight: 600;
+}
+
+.trans-total-container {
+  display: flex;
+  align-items: center;
+  padding-left: 4%;
+}
+
+.trans-name {
+  margin-left: 3vw;
+  font-size: 18px;
+}
+
+.category-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.log-out-a {
+  background-color: transparent;
+  border: none;
+}
+
+.log-out-a:hover {
+  cursor: pointer;
+}
+
+.nav-container .button_to {
+  padding-right: 4%;
+}
+
+.add-new,
+.add-new-a {
+  background-color: #5fb523;
+}
+
+.add-new-a {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  text-align: center;
+}
+
+.add-new {
+  border: 2px solid rgb(245, 245, 245);
+  color: rgb(245, 245, 245);
+  padding: 15px;
+  margin: 13px;
+  width: 92%;
+  text-transform: uppercase;
 }
