--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');
-
 :root {
   --main-color: #3778c2;
   --second-color: #5fb523;
@@ -24,8 +22,22 @@ body {
   background-color: var(--main-color);
 }
 
+h1,
+h2 {
+  font-weight: 500;
+  color: var(--text-color);
+  text-align: center;
+  font-size: 23px;
+  text-transform: uppercase;
+}
+
+.header h1,
+.header h2 {
+  padding-bottom: 5px;
+}
+
 #splash_screen h1 {
-  font-family: 'Playball', cursive;
+  font-family: 'comic Sans MS', sans-serif;
   font-size: 4rem;
   letter-spacing: 3px;
   color: var(--text-color);
@@ -45,6 +57,25 @@ body {
   align-items: center;
 }
 
+a,
+a:visited {
+  color: inherit;
+}
+
+.categories-ul li,
+.categories-ul a {
+  margin-top: 10px;
+  text-align: center;
+  background-color: #fff;
+  width: 92%;
+  padding-top: 2vh;
+  padding-bottom: 2vh;
+  box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.2);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 #splash_screen .actions a {
   display: block;
   text-align: center;
@@ -61,8 +92,6 @@ body {
   color: var(--text-color);
 }
 
-/* Categories */
-
 .header {
   position: fixed;
   width: 100%;
@@ -75,24 +104,9 @@ body {
   box-shadow: 0 4px 4px rgba(0, 0, 0, 0.2);
 }
 
-h1,
-h2 {
-  font-weight: 500;
-  color: var(--text-color);
-  text-align: center;
-  font-size: 23px;
-  text-transform: uppercase;
-}
-
 .h3 {
   color: #fff;
   font-weight: lighter;
-}
-
-
-.header h1,
-.header h2 {
-  padding-bottom: 5px;
 }
 
 #categories,
@@ -100,12 +114,6 @@ h2 {
 .img-amount-container,
 .home-ul {
   margin-top: 16vh;
-}
-
-a,
-a:visited {
-  color: inherit;
-  /* Use the same color as the default text color */
 }
 
 .form-container {
@@ -117,18 +125,6 @@ a:visited {
   font-size: 37px;
 }
 
-.form-container {
-  height: 60vh;
-}
-
-/* .home-ul a {
-  text-align: center;
-  background-color: rgb(245, 245, 245);
-  width: 90%;
-  padding-top: 4vh;
-  padding-bottom: 4vh;
-  box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.2);
-} */
 
 .field,
 .form-btn-container,
@@ -153,7 +149,6 @@ a:visited {
   font-size: 2.4vh;
 }
 
-/* Basic button styles */
 .form-btn {
   width: 90%;
   display: inline-block;
@@ -164,38 +159,18 @@ a:visited {
   text-align: center;
   text-transform: uppercase;
   border: none;
-  /* border-radius: 6px; */
   cursor: pointer;
-  background-color: #3778c2;
+  background-color: var(--main-color);
   color: var(--text-color);
-  /* transition: background-color 0.3s ease, transform 0.1s ease; */
 }
 
-/* Button hover effect
-.form-btn:hover {
-  background-color: #206a9b;
-  transform: scale(1.1);
-} */
-
-.remember-me-cb {
-  width: 7vw;
+.remember-me {
+  width: 1vw;
 }
 
 .remember-me-label {
   font-size: 15px;
   margin-left: 1vw;
-}
-
-/* Optional: Add more styles for different button states (e.g., :active, :focus) */
-
-#error_explanation,
-#error_explanation * {
-  font-size: 13px;
-  text-align: left;
-  text-transform: none;
-  color: rgba(255, 0, 0, 0.582);
-  padding-left: 3px;
-  font-weight: 600;
 }
 
 .nav-container {
@@ -216,19 +191,6 @@ a:visited {
   margin-bottom: 85px;
 }
 
-.categories-ul li,
-.categories-ul a {
-  margin-top: 10px;
-  text-align: center;
-  background-color: #fff;
-  width: 92%;
-  padding-top: 2vh;
-  padding-bottom: 2vh;
-  box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.2);
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
 
 .categories-ul li p {
   padding-left: 10px;
@@ -272,15 +234,6 @@ a:visited {
   width: 100%;
   height: 100%;
   object-fit: cover;
-}
-
-.log-out-a {
-  background-color: transparent;
-  border: none;
-}
-
-.log-out-a:hover {
-  cursor: pointer;
 }
 
 .nav-container .button_to {
