Update README.md file

--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -2,7 +2,7 @@
     <div class="nav-container">
         <div></div>
         <%= button_to destroy_user_session_path, method: :delete, class: "log-out-a", data: { turbo: false } do %>
-            <h3 class="h3">logout</h3>
+            <h3>logout</h3>
         <% end %>
     </div>
     <h1>Categories</h1>
