--- a/app/views/splash_screen/index.html.erb
+++ b/app/views/splash_screen/index.html.erb
@@ -2,6 +2,6 @@
     <h1>Budget App</h1>
     <div class="actions">
         <%= link_to "LOG IN", new_user_session_path %>
-        <%= link_to "SIGN OUT", new_user_registration_path %>
+        <%= link_to "SIGN UP", new_user_registration_path %>
     </div>
 </section>
